start forum module

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,9 +5,8 @@
     <base href="./"/>
     <link href="./app.css" type="text/css" rel="stylesheet" />
 </head>
-
 <body>
-<h1>!</h1>
+<div id="root-node"></div>
 <script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
